menu-button fix

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div id="users">
             <!-- Upper menu -->
             <div id="upper-menu">
-                <span><a href="#" class="fa-solid fa-list"></a> Speaker View</span>
-                <span><a href="#" class="fa-solid fa-maximize"></a></span>
+                <span class="menu-button"><a href="#" class="fa-solid fa-list"></a> Speaker View</span>
+                <span class="menu-button"><a href="#" class="fa-solid fa-maximize"></a></span>
             </div>
             <!-- Utente -->
             <div class="single-user">
